ChunkMigrationInserters shouldn't be allowed to implicitly create the collection for the chunk being migrated

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc11
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0
    • CAR Team 2024-07-08
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The findings in SERVER-89840 shows that if the collection for the chunk being migrated is dropped between the collection and index creation step and the cloning step, the inserts in the ChunkMigrationInserters thread would cause the collection to be implicitly created. This shouldn't be allowed since the collection needs to be created with the same options and UUID as on the donor shard and the implicit collection creation breaks this.

            Assignee:
            Robert Sander (Inactive)
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: