SERVER-89971 ChunkMigrationInserters shouldn't be allowed to implicitly create the collection for the chunk being migrated (#23956)

GitOrigin-RevId: a5c6ea186d2abec11a4b7eb230c693910b55538f